--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stitches/react": "^1.2.7",
+    "@storyblok/react": "^1.0.5",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "storyblok-rich-text-react-renderer": "^2.5.3"
   },
   "devDependencies": {
     "eslint": "8.13.0",
